# charcoal

./: .rustfmt.toml  Cargo.toml  Changelog.md  LICENSE  PKGBUILD  Readme.md  build.rs  dist-workspace.toml  flake.nix
.github/workflows/: __release.yml  aur.yml  release.yml
completions/: _charcoal  _charcoal.ps1  charcoal.bash  charcoal.elv  charcoal.fish
scripts/: aur.py  grey.py  refresh.py
scripts/data/: .gitignore  bank.json  known.json
src/: app.rs  builder.rs  cache.rs  cli.rs  config.rs  display.rs  entry.rs  lib.rs  main.rs  query.rs  select.rs  speech.rs  suggestion.rs  word.rs
src/app/: builder.rs  cache.rs  cli.rs  config.rs
src/query/: sentence.rs  utils.rs
src/select/: sentence.rs
src/word/: backend.rs  cached.rs  display.rs  frontend.rs  pprint.rs  query.rs  select.rs  speech.rs  youdict.rs
src/word/backend/: mod.rs  youdict.rs
src/word/frontend/: mod.rs  single_entry.rs
src/word/youdict/: sentence.rs
wix/: main.wxs
