[package]
name = "charcoal"
version = "0.1.0"
edition = "2021"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "A command line dictionary"
readme = "Readme.md"
homepage = "https://github.com/LighghtEeloo/Charcoal"
repository = "https://github.com/LighghtEeloo/Charcoal"
license = "MIT"
keywords = ["cli", "search", "translation", "translate"]
categories = ["command-line-utilities"]

[dependencies]
# error handling
anyhow = "1.0"

# async
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["executor"] }

# logging
log = "0.4"
env_logger = "0.9"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
bincode = "1.3"

# cli
clap = { version = "3.2", features = ["derive"] }
colored = "2.0"

# path management
directories-next = "2.0"

# web
url = "2"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"

# play audio
rodio = { version = "0.15", features = ["symphonia-mp3"]}

# language
whatlang = "0.16"
