[package]
name = "charcoal-dict"
version = "0.2.6"
edition = "2021"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "A command line dictionary"
readme = "Readme.md"
homepage = "https://github.com/LighghtEeloo/charcoal"
repository = "https://github.com/LighghtEeloo/charcoal"
license = "MIT"
keywords = ["cli", "search", "translation", "translate"]
categories = ["command-line-utilities"]

[[bin]]
name = "charcoal"

[dependencies]
# error handling
anyhow = "1.0"

# async
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["executor"] }

# logging
log = "0.4"
env_logger = "0.10"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
bincode = "1.3"

# tar.gz
tar = "0.4"

# cli
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
which = "4.4"

# path management
directories = "5.0"
shellexpand = "3.0"

# web
url = "2"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"

# play audio
rodio = { version = "0.17", features = ["symphonia-mp3"]}

# language
whatlang = "0.16"
didyoumean = "1.1"

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"