[package]
name = "charcoal-dict"
version = "0.3.1"
edition = "2024"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "A command line dictionary"
readme = "Readme.md"
homepage = "https://github.com/LighghtEeloo/charcoal"
repository = "https://github.com/LighghtEeloo/charcoal"
license = "MIT"
keywords = ["cli", "search", "translation", "translate"]
categories = ["command-line-utilities"]

[package.metadata.wix]
upgrade-guid = "5AF2E0B3-2D87-420D-895A-193FE16A4F31"
path-guid = "17AF476E-DEA4-48C3-A8AB-ABDF5E7A4506"
license = false
eula = false

[[bin]]
name = "charcoal"

[dependencies]
# error handling
anyhow = "1.0"

# async
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["executor"] }

# logging
log = "0.4"
env_logger = "0.11"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.3"
wincode = { version = "0.4.4", features = ["derive"] }

# tar.gz
tar = "0.4"

# cli
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
which = "8"
console = "0.16"

# path management
directories = "6.0"
shellexpand = "3.0"

# web
url = "2"
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.25"

# play audio
rodio = { version = "0.22", features = ["symphonia-mp3"] }

# language
whatlang = { version = "0.18", features = ["serde"] }
didyoumean = "1.1"

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
